# kingdom-of-agents

./: AGENTS.md  CHANGELOG.md  README.md  package.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature-request.yml
.github/workflows/: build.yml
assets/kingdom/tiny-swords/: LICENSE.txt
assets/space/: atlas.json
assets/space/source/: coordinates.json
docs/: index.html  script.js  style.css
docs/provider-schemas/copilot/: 1.1.0.json  1.2.0.json  1.2.1.json  index.json
scripts/: snap-readme.mjs
src/: hud.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  lib.rs
src/game/: hud.js  index.html
src/game/scenes/: CodeKingdom.ts  MissionControl.ts
src/scenes/: MissionControl.ts  dashboardView.ts
tests/: app.spec.ts  code-kingdom.spec.ts  mission-control.spec.ts
